--- a/exercises/solutions/ng-alert-filterPipe/src/app/app.component.html
+++ b/exercises/solutions/ng-alert-filterPipe/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
+
+  <alert type="success">
+    Good work
+  </alert>
+
   <alert>
-    We have a problem
+    Almost out of stock
   </alert>
 
   <alert type="error" (closed)="onAlertClosed()">
