--- a/exercises/solutions/ng-users-form-validation/src/app/components/userTableList/userTableList.component.html
+++ b/exercises/solutions/ng-users-form-validation/src/app/components/userTableList/userTableList.component.html
@@ -1,5 +1,9 @@
 <div>
   <h3>Table View</h3>
+  <div *ngIf="errorMessage" class="alert alert-warning">
+    {{errorMessage}}
+  </div>
+
   <button class="btn btn-default" (click)="onAdd()">Add</button>
   <table class="table">
     <thead>
@@ -12,7 +16,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users">
+      <tr *ngFor="let user of users$ | async">
         <td>{{user.firstName}}</td>
         <td>{{user.lastName}}</td>
         <td><a [routerLink]="['/detail', user.id]">{{user.email}}</a></td>
