--- a/exercises/solutions/ng-users-form-validation/src/app/components/userPanelList/userPanelList.component.html
+++ b/exercises/solutions/ng-users-form-validation/src/app/components/userPanelList/userPanelList.component.html
@@ -1,4 +1,7 @@
 <h3>Panel View</h3>
+<div *ngIf="errorMessage" class="alert alert-warning">
+  {{errorMessage}}
+</div>
 <div class="flex-grid">
   <div class="col" *ngFor="let user of users">
     <user [user]="user"></user>
