--- a/exercises/solutions/ng-users-form/src/app/components/userDetail/userDetail.component.html
+++ b/exercises/solutions/ng-users-form/src/app/components/userDetail/userDetail.component.html
@@ -1,11 +1,21 @@
 <h1>userDetail</h1>
 
-<form (ngSubmit)="onSubmit()" [formGroup]="userForm" novalidate>
+{{userForm.valid}}
+{{userForm.controls.firstName.errors | json }}
+
+<form (ngSubmit)="onSubmit()" [formGroup]="userForm">
 <div class="row">
     <div class="col-md-6">
       <div class="form-group">
         <label for="firstName">First name</label>
         <input type="text" class="form-control" formControlName="firstName">
+        <div *ngIf="userForm.controls['firstName'].hasError('required') &&
+                    userForm.controls['firstName'].touched">
+            This field is required!
+        </div>
+        <!--<div *ngIf="userForm.controls.firstName.hasError('minlength')">
+            This field need 3 characters
+        </div>-->
       </div>
     </div>
 
@@ -76,6 +86,8 @@
     </div>
   </div>
   <button class="btn btn-default" (click)="onCancel($event)">Cancel</button>
-  <button class="btn btn-success" type="submit">Save</button>
+  <button class="btn btn-success" type="submit" [disabled]="!userForm.valid">Save</button>
   <button *ngIf="user.id" class="btn btn-danger pull-right" (click)="onDelete(user, $event)">Delete</button>
 </form>
+
+VALID: {{userForm.valid}}
